# Memory-Simulator-Rust

./: README.md
mem_rust/: .gitignore  Cargo.toml
mem_rust/config/: memory.json  simulator.json
mem_rust/spec/ddr/ddr-x/: 8Gb_DDR4-2133_8bit_R.json  8Gb_DDR4-2400_8bit_R.json
mem_rust/spec/ddr/ddr4/: JEDEC_DDR4_2Gb_x16_1866N.json  JEDEC_DDR4_2Gb_x16_2133N.json  JEDEC_DDR4_2Gb_x16_2400P.json  JEDEC_DDR4_2Gb_x16_2933AA.json  x.json
mem_rust/src/: main.rs
mem_rust/src/bus/: data.rs  direction.rs  mod.rs
mem_rust/src/bus/direction_strategy/: credit_based.rs  hybrid.rs  look_ahead.rs  mod.rs  round_robin.rs  threshold.rs
mem_rust/src/config/: data.rs  manager.rs  mod.rs
mem_rust/src/controller/: controller.rs  mod.rs
mem_rust/src/memory/: mod.rs
mem_rust/src/memory/ddr/: bank.rs  bank_group.rs  ddr.rs  mod.rs  rank.rs
mem_rust/src/memory/gddr/: gddr.rs  mod.rs
mem_rust/src/queue/: mod.rs  per_bank.rs  per_bank_group.rs  per_dram.rs  per_rank.rs
mem_rust/src/scheduler/: fcfs.rs  frfcfs.rs  frfcs_per_bank.rs  helper.rs  mod.rs
mem_rust/src/simulation/: copy  mod.rs  runner.rs  system.rs
mem_rust/src/trace_reader/: cpu.rs  mem.rs  mod.rs
mem_rust/src/trace_reader/plug_in/: cpu.rs  mem.rs  mod.rs  test_plugin_reader.rs
mem_rust/trace/memory/: rt.100k  rt.10k  rt.1k  rt.250k  st.100k  st.10k  st.1k  st.250k  st.25k  st.50k
simulation_interface/: Cargo.toml
simulation_interface/src/: lib.rs
simulation_interface/src/address_mapping/: mapper.rs  mod.rs
simulation_interface/src/mem_request/: address.rs  callback.rs  mem_command.rs  mod.rs  (+3 more)
(+47 files in other folders)
