[package]
name = "mem_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simulation_interface = {path = "../simulation_interface"}
serde = { version = "1.0.203", features = ["derive"] }
rand = "0.8.5"
serde_json = "1.0.117"
libloading = "0.8.4"
memmap2 = "0.9.5"

[profile.release]
debug=1